Mon Mar  7 13:32:58 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class, rb_define_class_id_under): raise
	  ArgumentError if super is 0, deprecated behavior which has been
	  warned long time.

Mon Mar  7 13:28:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: move function declarations for class internals from
	  include/ruby/intern.h.

Mon Mar  7 10:58:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32ole/win32ole_event.c (rescue_callback): use
	  rb_write_error_str instead of rb_write_error, to respect
	  the encoding and prevent the message from GC.

	* internal.h (rb_write_error_str): export.

Mon Mar  7 01:38:41 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/ruby/test_process.rb (test_execopts_gid): Skip a test
	  that is known to fail on AIX. AIX allows setgid to
	  a supplementary group, but Ruby does not allow the "-e"
	  option when setgid'ed, so the test does not work as intended.

Sun Mar  6 22:43:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_obj_display): [DOC] fix output of Array, as Array#to_s
	  is same as Array#inspect since 1.9.

Sat Mar  5 09:50:58 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/socket/test_addrinfo.rb (test_ipv6_address_predicates):
	  IN6_IS_ADDR_V4COMPAT and IN6_IS_ADDR_V4MAPPED are broken
	  on AIX, so skip related tests.

Sat Mar  5 09:17:54 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/rinda/test_rinda.rb (test_make_socket_ipv4_multicast):
	  The fifth argument to getsockopt(2) should be modified to
	  indicate the actual size of the value on return,
	  but not in AIX. This is a know bug. Skip related tests.
	* test/rinda/test_rinda.rb (test_ring_server_ipv4_multicast):
	  ditto.
	* test/rinda/test_rinda.rb (test_make_socket_unicast): ditto.
	* test/socket/test_basicsocket.rb (test_getsockopt): ditto.
	* test/socket/test_sockopt.rb (test_bool): ditto.

Sat Mar  5 07:36:27 2016  Rei Odaira  <Rei.Odaira@gmail.com>
